--- a/.golangci.yml
+++ b/.golangci.yml
@@ -11,10 +11,18 @@ linters:
     - exhaustivestruct
     - exhaustruct
     - varnamelen
+    - ifshort # Deprecated
+    - scopelint # Deprecated
+    - interfacer # Deprecated
+    - golint # Deprecated
 
 linters-settings:
   lll:
     line-length: 160
+
+  gocritic:
+    disabled-checks:
+      - ifElseChain
 
 issues:
   exclude-rules:
