--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,13 +1,12 @@
 name: CI
 on: [push]
 jobs:
-
   test:
     name: Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.16, 1.17, 1.18, 1.19]
+        go-version: ["1.16", "1.17", "1.18", "1.19", "1.20"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
@@ -26,13 +25,12 @@ jobs:
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
-
   lint:
     name: Lint
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.16, 1.17, 1.18, 1.19]
+        go-version: ["1.16", "1.17", "1.18", "1.19", "1.20"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
@@ -48,13 +46,12 @@ jobs:
         with:
           version: v1.48.0
 
-
   regression-test:
     name: Regression Test
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        go-version: [1.16, 1.17, 1.18, 1.19]
+        go-version: ["1.16", "1.17", "1.18", "1.19", "1.20"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
