--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,44 +4,46 @@ jobs:
   test:
     name: Test
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
+      fail-fast: false
       matrix:
-        go-version: ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24"]
+        go-version:
+          ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ matrix.go-version }}
 
       - name: Check out code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v5
 
       - name: Test
         run: go test -race -coverprofile=coverage.txt -covermode=atomic ./...
 
       - name: Upload to codecov
-        uses: codecov/codecov-action@v1
+        uses: codecov/codecov-action@v5
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
 
   lint:
     name: Lint
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
+      fail-fast: false
       matrix:
-        go-version: ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24"]
+        go-version:
+          ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ matrix.go-version }}
 
       - name: Check out code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v5
 
       - name: Lint
         uses: golangci/golangci-lint-action@v2
@@ -51,19 +53,20 @@ jobs:
   regression-test:
     name: Regression Test
     runs-on: ubuntu-latest
-    continue-on-error: true
     strategy:
+      fail-fast: false
       matrix:
-        go-version: ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24"]
+        go-version:
+          ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
-        uses: actions/setup-go@v2
+        uses: actions/setup-go@v6
         with:
           go-version: ${{ matrix.go-version }}
 
       - name: Check out code
-        uses: actions/checkout@v1
+        uses: actions/checkout@v5
 
       - name: Install lambgo
         run: go install ./cmd/lambgo
