--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,6 +50,30 @@ jobs:
         with:
           version: v2.5.0
 
+  staticcheck:
+    name: Staticcheck
+    runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        # Staticcheck requires Go 1.23+
+        go-version: ["1.23", "1.24", "1.25"]
+
+    steps:
+      - name: Set up Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v6
+        with:
+          go-version: ${{ matrix.go-version }}
+
+      - name: Check out code
+        uses: actions/checkout@v5
+
+      - name: Staticcheck
+        uses: dominikh/staticcheck-action@v1
+        with:
+          version: "2025.1.1"
+          install-go: false
+
   regression-test:
     name: Regression Test
     runs-on: ubuntu-latest
