--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,8 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version:
-          ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24", "1.25"]
+        go-version: ["1.21", "1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
@@ -33,8 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version:
-          ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24", "1.25"]
+        go-version: ["1.21", "1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
@@ -80,8 +78,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version:
-          ["1.18", "1.19", "1.20", "1.21", "1.22", "1.23", "1.24", "1.25"]
+        go-version: ["1.21", "1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
