--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ["1.21", "1.22", "1.23", "1.24", "1.25"]
+        go-version: ["1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
@@ -32,7 +32,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ["1.21", "1.22", "1.23", "1.24", "1.25"]
+        go-version: ["1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
@@ -78,7 +78,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        go-version: ["1.21", "1.22", "1.23", "1.24", "1.25"]
+        go-version: ["1.22", "1.23", "1.24", "1.25"]
 
     steps:
       - name: Set up Go ${{ matrix.go-version }}
